añadimos creacion de la tabla y parte de javascript

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <h1>Práctica SISIN - Tema 7</h1>
+    <h1 class="titulo">Práctica SISIN - Tema 7</h1>
     
     <table>
         <thead>
-            <tr class="tablaEncabezado">
+            <tr>
                 <th>idEmpleado</th>
                 <th>nombre</th>
                 <th>apellido</th>
@@ -25,7 +25,7 @@
         </thead>
 
         <tbody>
-            <!-- Aquí se agregarán las filas de la tabla -->
+            <tr class="primeraFila"></tr>
         </tbody>
 
     </table>
