Cambios en la parte del script del index.html (ip const urlObtenerHorario) y cambios en el README_RodrigoMedina.md

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script>
 
-        const urlObtenerHorario = '/backend/conexionBBDD.php'
+        const urlObtenerHorario = 'http://192.168.55.106/backend/conexionBBDD.php'
 
         // Llamar a la función obtenerHorario para cargar la lista de Módulos Profesionales al cargar la página web
         obtenerHorario()
